Package issue resolved in mem

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-typo",
+  "name": "react-typo-typingmaster",
   "version": "1.0.0",
   "description": "react-typo is a React typography system which allows you to use various kind of typography",
   "author": "dushanrandika",
