--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "peerDependencies": {
     "prop-types": "^15.5.4",
     "react": "^15.0.0 || ^16.0.0",
-    "react-dom": "^15.0.0 || ^16.0.0"
+    "react-dom": "^15.0.0 || ^16.0.0",
+    "axios": "^0.19.0"
   },
   "devDependencies": {
     "@svgr/rollup": "^2.4.1",
@@ -53,9 +54,11 @@
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^1.6.2",
-    "rollup-plugin-url": "^1.4.0"
+    "rollup-plugin-url": "^1.4.0",
+    "axios": "^0.19.0"
   },
   "files": [
     "dist"
-  ]
+  ],
+  "dependencies": {}
 }
